// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 17ec5300aa2b7b021684485d95bee76874c0356485882982a507b4f166597af0 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "17ec5300aa2b7b021684485d95bee76874c0356485882982a507b4f166597af0",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = 85409ad4cd9198536d83c72330558f54e5f8617d4ca8752d2e433235d05a3d88 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "85409ad4cd9198536d83c72330558f54e5f8617d4ca8752d2e433235d05a3d88",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 7f1f466d25bdae07c4983ab7d810d63f87f91842bc2d8a62252660c15e7ce000 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "7f1f466d25bdae07c4983ab7d810d63f87f91842bc2d8a62252660c15e7ce000",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 001eb74e676031b8c34d211d202e1a84d8cc1ff525c72fe5aaa5880ecde28620 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "001eb74e676031b8c34d211d202e1a84d8cc1ff525c72fe5aaa5880ecde28620",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": undefined,
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = a1f96d08d27dadb61690ae562db5a5b346b2e172fa3b6402cd1a7f1032aee400 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "a1f96d08d27dadb61690ae562db5a5b346b2e172fa3b6402cd1a7f1032aee400",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = 9630529f77d12a86a02e14ca79f04628f52bbe226525257abe496f2d5d907217 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "9630529f77d12a86a02e14ca79f04628f52bbe226525257abe496f2d5d907217",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 6a3233d13653019ad2914fa3ca0c6f40db7d1de9d2cb7da5b86450d6dd336f3e 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "6a3233d13653019ad2914fa3ca0c6f40db7d1de9d2cb7da5b86450d6dd336f3e",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = e81eb07626b4a9ca3416b230ea17b675ef678ed35be10ead4aa35cbb8d046b02 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "e81eb07626b4a9ca3416b230ea17b675ef678ed35be10ead4aa35cbb8d046b02",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": undefined,
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 88cbc09134ff815de64066668579831efdf535dbcaa847f4005429f6aa997c5a 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the checkout date],
    "hash": "88cbc09134ff815de64066668579831efdf535dbcaa847f4005429f6aa997c5a",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 956f28a213a6e53d0c8206fb240a10292e2e8998be37462e012e5b11aab57dbf 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "956f28a213a6e53d0c8206fb240a10292e2e8998be37462e012e5b11aab57dbf",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 6c6d76fc331dfa2dda5afade315b0ba4a94c01eb2a4dc7a34ceb4e679b350785 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "6c6d76fc331dfa2dda5afade315b0ba4a94c01eb2a4dc7a34ceb4e679b350785",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "AF",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 6a99be3f6be400ced21a96110584f5e820b4f0479563433f56987b6159892f31 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: Country must be filled],
    "hash": "6a99be3f6be400ced21a96110584f5e820b4f0479563433f56987b6159892f31",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": undefined,
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;
